# PolyWhirl

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
notebooks/: visuals.ipynb
signal_detection/: Bayesian.py  OrderBookSignal.py  PINDetection.py  SentimentDetector.py
src/: Kafka_consumer.py  Kafka_producer.py  PolyAPI.py  PolyDirection.py  PolyEvent.py  PolyMarket.py  PolyOrderBook.py  PolyStreamer.py  PolyTokenEssence.py  PolyTrade.py  redis_connect.py  redis_stream.py  requests_v_aiohttp.py
