[project]
name = "polywhirl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "asyncio>=4.0.0",
    "kafka-python>=3.0.0",
    "polars>=1.41.2",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.setuptools.packages.find]
where = ["."]   # search from project root
include = ["src*", "signal_detection*"]
